--- a/ninjanode/package.json
+++ b/ninjanode/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "lodash": "^4.17.21",
+    "mongoose": "^8.9.3",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
