form and data handling

--- a/form-and-data-handling/package.json
+++ b/form-and-data-handling/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "express",
+  "name": "form-and-data-handling",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node --watch app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +13,6 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "express-async-handler": "^1.2.0",
     "express-validator": "^7.2.1"
   }
 }
